feat: added working search function with documentation

--- a/README.Rmd
+++ b/README.Rmd
@@ -36,5 +36,13 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(kvkapiR)
-## basic example code
+
+koudum <- kvk_search(plaats = "Koudum")
+koudum
 ```
+
+
+```{r}
+rotterdam <- kvk_search(plaats = "Rotterdam", type = "hoofdvestiging")
+```
+
